refactor(client): 优化 ChannelManager 中的通道释放逻辑
-将通道释放操作放在获取结果之后，以防止连接被提前释放- 在 README 中添加英文版本 README_EN.md，增加项目说明和使用示例
- 优化 README.md，移除冗余的虚拟线程配置说明